[tool.poetry]
name = "hippodb-client"
version = "0.1.0"
description = ""
authors = ["Ohin Taylor <kazani@kazani.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.5"
orjson = "^3.10.3"
pydantic = "^2.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
